Fixed speaker name overlap issue in the session list block

--- a/themes/nabshow-ny/assets/css/nabshow-ny.css
+++ b/themes/nabshow-ny/assets/css/nabshow-ny.css
@@ -115,7 +115,7 @@
 
 .modal-dialog{position:absolute !important;max-width:800px !important;width:96% !important;}
 .session-date-list .schedule-row .channel-pass span.channel-name{pointer-events:none;}
-.session-date-list .schedule-row .info-more-details .session-speaker ul{list-style:none;margin:0 0 0 10px;padding:0;}
+.session-date-list .schedule-row .info-more-details .session-speaker ul{list-style:none;margin:0 0 0 10px;padding:0;display: inline-block;width: calc(100% - 100px);}
 .session-date-list .schedule-row .info-more-details .session-speaker ul li{display:inline-block;vertical-align:middle;}
 .session-date-list .schedule-row .info-more-details .session-speaker ul li:not(:last-child):after{content:",";}
 .session-date-list .schedule-row .info-more-details .session-speaker ul li a,
